After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706382 - MonitorManager: emit a DBus signal when we change the display configuration
MonitorManager: emit a DBus signal when we change the display configuration
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-20 11:32 UTC by Giovanni Campagna
Modified: 2013-08-20 11:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
MonitorManager: emit a DBus signal when we change the display configuration (2.20 KB, patch)
2013-08-20 11:32 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2013-08-20 11:32:37 UTC
Using out-of-band notifications from the wayland protocol or from
X is racy, in that the client could ask for the new resources before
we have them.
Instead, with a signal, we are sure that when the client asks for
it, it will get the right values.
Comment 1 Giovanni Campagna 2013-08-20 11:32:40 UTC
Created attachment 252376 [details] [review]
MonitorManager: emit a DBus signal when we change the display configuration
Comment 2 Matthias Clasen 2013-08-20 11:36:04 UTC
Review of attachment 252376 [details] [review]:

ok
Comment 3 Giovanni Campagna 2013-08-20 11:59:44 UTC
Attachment 252376 [details] pushed as 44097c1 - MonitorManager: emit a DBus signal when we change the display configuration